// $Id$

Data 6.x x.x xxx, 20xx-xx-xx
----------------------------

- Rename "manage data relations" to "edit data node relations".
- #688850 k4ml: Fix incompatible PostgreSQL query.

Data 6.x 1.0 Alpha 9, 2009-11-18
--------------------------------

- #625092 phayes: Geometry support.
- #623974 phayes: Big text support.
- #615078 bec: Fix creating table with varchar field + size.
- #616324 bec: adopt tables.

Data 6.x 1.0 Alpha 8, 2009-10-20
---------------------------------

- Initial release.