@@ -78,7 +78,9 @@ class DataHandler {
    *   An array that is the record to save to this handler's table.
    */
   public function insert(&$record) {
-    return drupal_write_record($this->table, $record);
+    $result = drupal_write_record($this->table, $record);
+    module_invoke_all('data_insert', $record);
+    return $result;
   }
 
   /**
@@ -93,7 +95,9 @@ class DataHandler {
    *   this update.
    */
   public function update(&$record, $update) {
-    return drupal_write_record($this->table, $record, $update);
+    $result = drupal_write_record($this->table, $record, $update);
+    module_invoke_all('data_update', $record);
+    return $result;
   }
 
   /**
@@ -112,26 +116,53 @@ class DataHandler {
    */
   public function save(&$record, $update = array()) {
     if (is_string($update) || count($update)) {
-      if (SAVED_UPDATED != drupal_write_record($this->table, $record, $update)) {
-        return drupal_write_record($this->table, $record);
+      $result = drupal_write_record($this->table, $record, $update);
+      if (SAVED_UPDATED != $result) {
+        $result = drupal_write_record($this->table, $record);
+        module_invoke_all('data_insert', $record);
+        return $result;
       }
+      module_invoke_all('data_update', $record);
+      return $result;
     }
-    return drupal_write_record($this->table, $record);
+    $result = drupal_write_record($this->table, $record);
+    module_invoke_all('data_insert', $record);
+    return $result;
   }
 
   /**
    * Delete one or more records from the table.
+   *
+   * @param $clause
+   *   An array where the keys are columns in the data table and the values are
+   *   the values to filter on. This array will be turned into the where clause
+   *   of the delete query.
+   *
+   *   Example:
+   *
+   *   array(
+   *     'feed_nid' => 10,
+   *     'timestamp' => array(
+   *       '<',
+   *       1255623780,
+   *     ),
+   *   );
    */
-  public function delete($keys) {
-    $where = $values = array();
+  public function delete($clause) {
+    $query = new DataQuery($this->table);
     $schema = drupal_get_schema($this->table);
     $fields = $schema['fields'];
-    foreach ($keys as $key => $value) {
-      $where[] = db_escape_string($key) ." = ". db_type_placeholder($fields[$key]['type']);
-      $values[] = $value;
+    foreach ($clause as $key => $value) {
+      $operator = '=';
+      if (is_array($value)) {
+        $operator = array_shift($value);
+        $value = array_shift($value);
+      }
+      $query->addWhere(db_escape_table($this->table) .'.'. db_escape_string($key) ." ". $operator ." ". db_type_placeholder($fields[$key]['type']), $value);
     }
-    if (!empty($where)) {
-      db_query('DELETE FROM {'. db_escape_table($this->table) .'} WHERE '. implode(' AND ', $where), $values);
+    drupal_alter('data_delete_query', $query);
+    if (!empty($query->where)) {
+      $query->execute();
     }
     return db_affected_rows();
   }
@@ -141,5 +172,87 @@ class DataHandler {
    */
   public function truncate() {
     db_query('TRUNCATE TABLE {'. db_escape_table($this->table) .'}');
+  }
+}
+
+/**
+ * Builds and executes a query, only delete queries are supported at the moment.
+ */
+class DataQuery {
+
+  public $subject, $table, $from, $join, $where;
+
+  /**
+   * Creates an empty query.
+   *
+   * @param $table
+   *   Base table to operate on, also the subject table to delete
+   *   from.
+   */
+  public function __construct($table) {
+    $this->table = db_escape_table($table);
+    $this->subject = array($this->table);
+    $this->from = db_escape_table($this->table);
+    $this->join = array();
+    $this->where = array();
+  }
+
+  /**
+   * Add a subject table.
+   */
+  public function addSubject($table) {
+    $this->subject[$table] = $table;
+  }
+
+  /**
+   * Add a join.
+   *
+   * @param $table
+   *   The table to join to.
+   * @param $join
+   *   The columns to join on.
+   */
+  public function addJoin($table, $join, $type = 'INNER JOIN') {
+    $this->join[$table] = array(
+      $join,
+      $type,
+    );
+  }
+
+  /**
+   * Add a where clause.
+   *
+   * @param $clause
+   *   The actual clause. Caller is responsible for referring to existing fields
+   *   and supplying correct placeholder for value.
+   * @param $value
+   *   The value the clause compares against.
+   */
+  public function addWhere($clause, $value) {
+    $this->where[$clause] = $value;
+  }
+
+  /**
+   * Build and execute a query.
+   */
+  public function execute() {
+    $query = "DELETE ". implode(', ', $this->subject);
+    $query .= " FROM ". $this->table;
+    if (!empty($this->join)) {
+      foreach ($this->join as $table => $join) {
+        $clause = array_shift($join);
+        $join = array_shift($join);
+        $query .= " $join $table ON $clause";
+      }
+    }
+    $where = $values = array();
+    foreach ($this->where as $k => $v) {
+      $where[] = $k;
+      $values[] = $v;
+    }
+    if (!empty($where)) {
+      $query .= " WHERE ". implode(' ', $where);
+    }
+    return db_query($query, $values);
   }
 }
