@@ -3,6 +3,10 @@
 Data 6.x x.x xxx, 20xx-xx-xx
 ----------------------------
 
+- Add observer/visitor hooks for insert/update/delete.
+  hook_data_insert()
+  hook_data_delete()
+  hook_data_delete_query_alter()
 - Rename "manage data relations" to "edit data node relations".
 - #688850 k4ml: Fix incompatible PostgreSQL query.
 
